Sat Jan 26 10:45:41 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Call silc_server_remove_from_channels when removing client
	  entry when NO_SUCH_CLIENT_ID was received.  Affected file
	  is silcd/command_reply.c.

Fri Jan 25 19:12:36 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added server & router operator statistics updating.  Affected
	  file silcd/packet_receive.c and silcd/command.c.

	* Fixed the SERVER_SIGNOFF notify handling on normal server
	  not to save the history information for clients.  Same was
	  fixed earlier in remove_clients_by_server function, but not
	  here.  Affected file silcd/packet_receive.c.

	* Raised the default connection-retry count from 4 to 7 in
	  server.  Affected file silcd/server.h.

	* Cancel any possible reconnect timeouts when we start the
	  key exchange.  Affected file silcd/server.c.

	* Do not reconnect on connection failure when SCONNECT was
	  given.  Affected files silcd/server.[ch].

Tue Jan 22 18:19:36 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Removed assert()'s from the lib/silcclient/client_keyagr.c.

	* Fixed the NICK command to always give the unformatted
	  nickname to the one giving the NICK command.  If unformatted
	  nickname is cached already it will be formatted and the
	  local entry will always get the unformatted nickname.
	  Affected file lib/silcclient/idlist.c.

	* Fixed some double frees from client library commands.
	  Affected file is lib/silcclient/command.c.

	* Fixed CUMODE command in server to assure that no one can
	  change founder's mode than the founder itself, there was a
	  little bug.  Affected file silcd/command.c.

Mon Jan 21 19:07:53 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Removed the SilcClientCommandDestructor from the client
	  libary, it is not needed anymore.  Affected files are
	  lib/silcclient/silcapi.h, command[_reply].[ch],
	  client_notify, idlist.c.

	* Fixed GETKEY command to first resolve client, and then